# herd_proto

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
action/install-grpc/: action.yml
cmake/: FindGRPC.cmake  GRPC_Util.cmake
src/: auth.proto  ciphertext_value.proto  circuit.proto  common.proto  crypto_value.proto  execution.proto  execution_plan.proto  node.proto  session.proto  stage.proto  storage.proto  worker.proto
